--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>Hello word</title>
  </head>
  <body>
-    <h1>first task>/h1>
+    <h1>first task</h1>
+    <h2>second task</h2>
  </body>
 </html>
